# eltetrado

./: .gitignore  LICENSE  MANIFEST.in  README-pandoc.md  README.md  devenv.nix  el_tetrado  el_tetrado.py  eltetrado  has_tetrad  mp.R  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: auto_rebase.yml  publish-to-pypi.yml  python-app.yml
src/eltetrado/: __init__.py  analysis.py  cli.py  dto.py  eltetrado.py  example.fasta  g4composer.py  h1.helix  has_tetrad.py  main.py  model.py  structure.py
src/eltetrado/compute/: VERSION  analysis.py  cli.py  h2.helix  io.py  model.py  quadraw.R
src/quadruplex/: VERSION  analysis.py  model.py
tests/: test_analysis.py  test_cli.py  test_dto.py  test_model.py
tests/files/: 1v3p-assembly-1.json  1v3p-assembly-1.txt  2awe-assembly-1-fr3d.out  2awe-assembly-1.json  2awe-assembly-1.out  2awe-assembly-1.out.json  2awe-assembly-1.txt  2km3-assembly1.json  2ms9.cif  2rsk-assembly1.json  5v3f-assembly-1.json  5zev-assembly1.json  6a85-assembly1.json  6fc9-assembly-1.out  6fc9-assembly-1.out.json  7zko-assembly-1.json
