[project]
name = "eltetrado"
version = "1.9.3"
description = "Find and classify tetrads and quadruplexes in DNA/RNA 3D structure"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tomasz Żok", email = "tomasz.zok@cs.put.poznan.pl" }]
keywords = ["bioinformatics", "rna", "dna", "quadruplex", "tetrad"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["mmcif", "numpy", "orjson", "rnapolis"]

[project.urls]
Homepage = "https://github.com/tzok/eltetrado"
Repository = "https://github.com/tzok/eltetrado"
Documentation = "https://github.com/tzok/eltetrado"

[project.scripts]
eltetrado = "eltetrado.cli:eltetrado_cli"
has_tetrad = "eltetrado.cli:has_tetrad_cli"

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.uv.build-backend]
source-exclude = ["*.helix", "example.fasta"]

[build-system]
requires = ["uv_build>=0.9.30,<0.12.0"]
build-backend = "uv_build"
