[metadata]
name = eltetrado
version = file: src/eltetrado/VERSION
author = Tomasz Żok
author_email = tomasz.zok@cs.put.poznan.pl
description = Find and classify tetrads and quadruplexes in DNA/RNA 3D structure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tzok/eltetrado
project_urls =
    Bug Tracker = https://github.com/tzok/eltetrado/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    mmcif
    numpy
    orjson
    requests
scripts =
    bin/eltetrado
    bin/has_tetrad

[options.entry_points]
console_scripts =
    eltetrado = eltetrado.cli:eltetrado_cli
    has_tetrad = eltetrado.cli:has_tetrad_cli

[options.packages.find]
where = src
